# why2025-dutchvms

./: .gitignore  CLAUDE.md  CMakeLists.txt  CREDITS.md  DUTCHVMS.md  NOTICE  README.md  sdkconfig.ci-badgelink  sdkconfig.defaults
.claude/: Build-And-CI.md  Components.md  Data-Flows.md  Guidelines.md  Pitfalls.md  Workflow.md
.github/workflows/: ci.yml  release.yml
Archive/: README.md
Assets/: README.md  generate_logo.py
badgevms/: CMakeLists.txt  Kconfig.projbuild  application.c  badgelink_transport_uart.c  badgelink_transport_uart.h  crypto.c  deploy_protocol.c  deploy_protocol.h  device.c  display_bridge.c  idf_component.yml  led_matrix_bridge.c  meminfo_bridge.c  notify.c  nvs_bridge.c  status_led_bridge.c  symbols.yml  task.c  task.h  why2025_firmware.c
badgevms/compositor/: compositor.c  pixel_functions.c  pixel_functions.h
badgevms/drivers/: badgevms_i2c_bus.c  ble_gatt_server.c  board_bringup.c  board_bringup.h  bosch_bme690.c  display_backlight_client.c  display_backlight_client.h  keyboard_backlight_client.c  led_matrix_internal.h  led_matrix_pca9698.c  led_matrix_pca9698.h  lora_proto_client.c  lora_proto_client.h  st7703.c  st7703.h  status_led_internal.h  status_led_ws2812.c  status_led_ws2812.h  tca8418.c  wifi.c
badgevms/drivers/badgelink/: badgelink.c  badgelink.h  badgelink.pb.c  badgelink.pb.h  badgelink_appfs.c  badgelink_fs.c  badgelink_internal.h  badgelink_nvs.c  badgelink_setusbmode.c  badgelink_startapp.c  cobs.c  cobs.h
badgevms/drivers/badgelink/nanopb/: pb.h  pb_common.c  pb_common.h  pb_decode.c  pb_decode.h  pb_encode.c  pb_encode.h
badgevms/drivers/esp-serial-flasher/: why2025_firmware.c
badgevms/include/badgevms/: ble.h  crypto.h  display.h  keyboard_backlight.h  led_matrix.h  lora.h  meminfo.h  notify.h  nvs.h  status_led.h
components/esp_psram/: Kconfig.spiram.common
components/esp_psram/system_layer/: esp_psram.c
connectivity_esp_hosted/slave/: sdkconfig.defaults
connectivity_esp_hosted/slave/main/: CMakeLists.txt  esp_hosted_coprocessor.c  idf_component.yml
connectivity_esp_hosted/slave/main/tanmatsu/: priv_events.h  tanmatsu_hardware.h  tanmatsu_main.c
connectivity_esp_hosted/slave/main/tanmatsu/lora/: lora_protocol.h  lora_protocol_server.c
docs/: CHANGELOG.md
docs/design/: SD-and-OTA-Updates.md
docs/guides/: Flashing.md  Releases.md
flash_storage/skel/BADGEVMS/APPS/: cj_i2c_scan.json  cj_lora_info.json
flash_storage/skel/BADGEVMS/APPS/cj_i2c_scan/: cj_i2c_scan.elf
flash_storage/skel/BADGEVMS/APPS/cj_lora_info/: cj_lora_info.elf
scripts/: check_stack_usage.py
sdk_apps/: CMakeLists.txt
sdk_apps/lvgl_test/: README.md  build.sh  lv_conf.h  lvgl_test.c  manifest.json
sdk_apps/pax_test/: README.md  build.sh  manifest.json  pax_test.c
sdk_apps/why2025_ota/: ota_update.c
